--- a/index.html
+++ b/index.html
@@ -594,15 +594,15 @@
     </main>
   </body>
   <footer
-    class="p-10 bg-[#131318] grid grid-cols-1 lg:grid-cols-4 justify-items-center text-white gap-3 h-auto lg:h-[480px] items-center mt-8"
+    class="p-10 bg-[#131318] grid grid-cols-1 lg:grid-cols-3 justify-items-center text-white gap-3 h-auto lg:h-[480px] items-center mt-8 space-y-2 lg:space-y-0"
   >
-    <aside>
-      <h3 class="text-xl">Get In Touch</h3>
+    <aside class="text-center lg:text-left ml-0 lg:ml-16">
+      <h3 class="text-xl font-bold">Get In Touch</h3>
       <p>
         Dit amet consectetur. Condimentum adipiscing aliquam turpis placerat
         dolor. Purus urna in sit nullam proin.
       </p>
-      <div class="flex gap-2">
+      <div class="flex gap-2 justify-center lg:justify-start items-center">
         <svg
           xmlns="http://www.w3.org/2000/svg"
           width="24"
@@ -620,7 +620,7 @@
         </svg>
         <p>hockeys@support.com</p>
       </div>
-      <div class="flex gap-2">
+      <div class="flex gap-2 justify-center lg:justify-start items-center">
         <svg
           xmlns="http://www.w3.org/2000/svg"
           width="24"
@@ -639,27 +639,29 @@
         <p>(+62) 123-321-543</p>
       </div>
     </aside>
-    <div class="flex justify-between">
+    <div class="flex gap-3 lg:gap-32">
       <div class="flex flex-col">
-        <h6 class="footer-title">Services</h6>
-        <a class="link link-hover">Branding</a>
-        <a class="link link-hover">Design</a>
-        <a class="link link-hover">Marketing</a>
-        <a class="link link-hover">Advertisement</a>
+        <h6 class="footer-title font-semibold">Company</h6>
+        <a class="link link-hover">About us</a>
+        <a class="link link-hover">Leadership</a>
+        <a class="link link-hover">News & Article</a>
+        <a class="link link-hover">Legal Notice</a>
       </div>
       <div class="flex flex-col">
-        <h6 class="footer-title">Company</h6>
-        <a class="link link-hover">About us</a>
-        <a class="link link-hover">Contact</a>
-        <a class="link link-hover">Jobs</a>
-        <a class="link link-hover">Press kit</a>
+        <h6 class="footer-title font-semibold">Support</h6>
+        <a class="link link-hover">Help Center</a>
+        <a class="link link-hover">FAQ</a>
+        <a class="link link-hover">Ticket Support</a>
+        <a class="link link-hover">Contact Us</a>
       </div>
     </div>
-    <div class="flex flex-col p-0 lg:pl-80">
-      <h6 class="footer-title">Legal</h6>
-      <a class="link link-hover">Terms of use</a>
-      <a class="link link-hover">Privacy policy</a>
-      <a class="link link-hover">Cookie policy</a>
+    <div class="flex flex-col">
+      <h6 class="footer-title font-semibold">Services</h6>
+      <a class="link link-hover">Academy</a>
+      <a class="link link-hover">Group Lesson</a>
+      <a class="link link-hover">Private Lesson</a>
+      <a class="link link-hover">Hockeys for kids</a>
+      <a class="link link-hover">Hockeys for Adult</a>
     </div>
   </footer>
 </html>
