--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
               style="--value: 87"
               role="progressbar"
             >
-              87%
+              <span class="text-black font-bold">87%</span>
             </div>
             <h4 class="text-xl text-[#131318] font-bold">Prayer Facility</h4>
             <p class="text-base font-normal text-slate-500">
@@ -181,9 +181,9 @@
               style="--value: 95"
               role="progressbar"
             >
-              95%
+              <span class="text-black font-bold">95%</span>
             </div>
-            <h4 class="text-xl text-[#131318] font-bold">Prayer Facility</h4>
+            <h4 class="text-xl text-[#131318] font-bold">Experienced Coach</h4>
             <p class="text-base font-normal text-slate-500">
               Lorem ipsum dolor sit amet.
             </p>
@@ -194,9 +194,9 @@
               style="--value: 90"
               role="progressbar"
             >
-              90%
+              <span class="text-black font-bold">90%</span>
             </div>
-            <h4 class="text-xl text-[#131318] font-bold">Prayer Facility</h4>
+            <h4 class="text-xl text-[#131318] font-bold">Senior player</h4>
             <p class="text-base font-normal text-slate-500">
               Lorem ipsum dolor sit amet.
             </p>
@@ -207,9 +207,9 @@
               style="--value: 80"
               role="progressbar"
             >
-              80%
+              <span class="text-black font-bold">80%</span>
             </div>
-            <h4 class="text-xl text-[#131318] font-bold">Prayer Facility</h4>
+            <h4 class="text-xl text-[#131318] font-bold">Training Ground</h4>
             <p class="text-base font-normal text-slate-500">
               Lorem ipsum dolor sit amet.
             </p>
