products section updated

--- a/index.html
+++ b/index.html
@@ -131,10 +131,15 @@
           </div>
         </div>
         <div
-          class="h-32 md:h-40 max-w-xs mx-auto md:m-0 md:max-w-lg bg-black md:-translate-y-24 md:translate-x-full rounded-2xl"
+          class="h-32 md:h-40 max-w-xs mx-auto md:m-0 md:max-w-lg bg-black md:-translate-y-56 md:translate-x-full rounded-2xl flex flex-col items-center justify-center"
         >
-          <h3>Meet all the heroes from the field</h3>
-          <p></p>
+          <h3 class="text-white font-bold">
+            Meet all the heroes from the field
+          </h3>
+          <p class="text-slate-400 text-center">
+            We consider ourselves an inclusive club, aiming to make hockey
+            accessible to all students at the University.
+          </p>
         </div>
       </div>
     </section>
@@ -160,7 +165,7 @@
           <div class="border-dashed border-2 border-b-slate-300"></div>
         </div>
         <div
-          class="progress-container grid grid-cols-1 md:grid-cols-4 justify-around items-center content-center mt-8"
+          class="progress-container grid grid-cols-1 md:grid-cols-4 justify-around items-start mt-8"
         >
           <div class="space-y-2 text-center">
             <div
@@ -172,7 +177,9 @@
             </div>
             <h4 class="text-xl text-[#131318] font-bold">Prayer Facility</h4>
             <p class="text-base font-normal text-slate-500">
-              Lorem ipsum dolor sit amet.
+              Our prayer facility is designed to provide a quiet and
+              contemplative space for individuals of all faiths to engage in
+              personal or communal prayer.
             </p>
           </div>
           <div class="space-y-2 text-center">
@@ -185,7 +192,8 @@
             </div>
             <h4 class="text-xl text-[#131318] font-bold">Experienced Coach</h4>
             <p class="text-base font-normal text-slate-500">
-              Lorem ipsum dolor sit amet.
+              we take pride in offering top-tier coaching services led by an
+              experienced and dedicated coaching professional.
             </p>
           </div>
           <div class="space-y-2 text-center">
@@ -198,7 +206,8 @@
             </div>
             <h4 class="text-xl text-[#131318] font-bold">Senior player</h4>
             <p class="text-base font-normal text-slate-500">
-              Lorem ipsum dolor sit amet.
+              we are proud to have a seasoned senior player as an integral part
+              of our roster.
             </p>
           </div>
           <div class="space-y-2 text-center">
@@ -211,7 +220,8 @@
             </div>
             <h4 class="text-xl text-[#131318] font-bold">Training Ground</h4>
             <p class="text-base font-normal text-slate-500">
-              Lorem ipsum dolor sit amet.
+              Our training grounds provide athletes with the optimal environment
+              to hone their skills, both individually and as a team.
             </p>
           </div>
         </div>
@@ -226,21 +236,22 @@
           </div>
           <div>
             <p class="manrope text-base text-center font-thin">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores,
-              quam.
+              For young enthusiasts passionate about, our program offers a
+              structured pathway for skill development, character building, and
+              a lifelong love for the game.
             </p>
           </div>
           <div class="border-dashed border-2 border-b-slate-300"></div>
         </div>
-        <div class="gallery-container">
+        <div class="gallery-container mt-2">
           <div class="grid grid-cols-1 md:grid-cols-2 gap-3">
             <div class="relative">
               <img class="w-full h-[330px]" src="images/2.png" alt="" />
               <div class="absolute top-36 left-3 text-white space-y-2">
                 <h4 class="text-lg font-bold">Junior Program</h4>
                 <p class="text-xs">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse,
-                  voluptatem.
+                  we believe in cultivating the next generation of athletes
+                  through our comprehensive Junior Development Program.
                 </p>
                 <button class="btn btn-error">Register Now!</button>
               </div>
@@ -250,8 +261,8 @@
               <div class="absolute top-36 left-3 text-white space-y-2">
                 <h4 class="text-lg font-bold">Teenager Program</h4>
                 <p class="text-xs">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse,
-                  voluptatem.
+                  Welcome to Teenager Development Program, a dynamic initiative
+                  crafted for adolescents with a passion for.
                 </p>
                 <button class="btn btn-error">Register Now!</button>
               </div>
@@ -265,8 +276,10 @@
               <div class="absolute top-36 left-3 text-white space-y-2">
                 <h4 class="text-lg font-bold">Professional Program</h4>
                 <p class="text-xs">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse,
-                  voluptatem.
+                  Welcome to the pinnacle of athletic excellence at.Our
+                  Professional Athlete Development Program is meticulously
+                  crafted for aspiring athletes seeking to reach the highest
+                  echelons of hockey.
                 </p>
                 <button class="btn btn-error">Register Now!</button>
               </div>
@@ -284,8 +297,9 @@
           </div>
           <div>
             <p class="text-base text-center font-thin md:w-[600px] mx-auto">
-              Dit amet consectetur. Condimentum dignissim adipiscing aliquam
-              turpis placerat dolor. Purus urna in sit nullam proin.
+              We are thrilled to introduce our latest lineup of cutting-edge
+              sports products designed to elevate your performance and enhance
+              your sporting experience.
             </p>
           </div>
           <div class="border-dashed border-2 border-b-slate-300"></div>
@@ -302,10 +316,13 @@
                 <span><i class="fa-solid fa-star"></i>5.0</span
                 ><span class="px-2"><i class="fa-regular fa-eye"></i>20</span
                 ><span><i class="fa-regular fa-heart"></i>200</span>
-                <h4>World Cup Flags Football</h4>
-                <p>Dolor sit amet consectetur. Ut urna diam quis sagittis.</p>
+                <h4 class="font-bold">Jackets For Hockeys</h4>
                 <p>
-                  <span>Price - $22.00</span
+                  These jackets are designed to elevate your hockey experience
+                  on and off the ice.
+                </p>
+                <p>
+                  <span class="text-[#FF4240] font-bold">Price - $22.00</span
                   ><span class="px-2"
                     ><i class="fa-solid fa-truck"></i>Delivery Fee : Free</span
                   >
@@ -322,10 +339,13 @@
                 <span><i class="fa-solid fa-star"></i>5.0</span
                 ><span class="px-2"><i class="fa-regular fa-eye"></i>20</span
                 ><span><i class="fa-regular fa-heart"></i>200</span>
-                <h4>World Cup Flags Football</h4>
-                <p>Dolor sit amet consectetur. Ut urna diam quis sagittis.</p>
+                <h4 class="font-bold">World Cup Flags Football</h4>
                 <p>
-                  <span>Price - $22.00</span
+                  Get ready to stand out on the flag football field with our
+                  latest collection of jerseys at our brand.
+                </p>
+                <p>
+                  <span class="text-[#FF4240] font-bold">Price - $22.00</span
                   ><span class="px-2"
                     ><i class="fa-solid fa-truck"></i>Delivery Fee : Free</span
                   >
@@ -342,10 +362,13 @@
                 <span><i class="fa-solid fa-star"></i>5.0</span
                 ><span class="px-2"><i class="fa-regular fa-eye"></i>20</span
                 ><span><i class="fa-regular fa-heart"></i>200</span>
-                <h4>World Cup Flags Football</h4>
-                <p>Dolor sit amet consectetur. Ut urna diam quis sagittis.</p>
+                <h4 class="font-bold">Cap For Hockeys</h4>
                 <p>
-                  <span>Price - $22.00</span
+                  Our hockey caps are not just an accessory; they're a statement
+                  of your passion for the game..
+                </p>
+                <p>
+                  <span class="text-[#FF4240] font-bold">Price - $32.00</span
                   ><span class="px-2"
                     ><i class="fa-solid fa-truck"></i>Delivery Fee : Free</span
                   >
@@ -362,10 +385,13 @@
                 <span><i class="fa-solid fa-star"></i>5.0</span
                 ><span class="px-2"><i class="fa-regular fa-eye"></i>20</span
                 ><span><i class="fa-regular fa-heart"></i>200</span>
-                <h4>World Cup Flags Football</h4>
-                <p>Dolor sit amet consectetur. Ut urna diam quis sagittis.</p>
+                <h4 class="font-bold">Jersey</h4>
                 <p>
-                  <span>Price - $22.00</span
+                  Gear up for victory with our latest collection of hockey
+                  jerseys .
+                </p>
+                <p>
+                  <span class="text-[#FF4240] font-bold">Price - $25.00</span
                   ><span class="px-2"
                     ><i class="fa-solid fa-truck"></i>Delivery Fee : Free</span
                   >
@@ -382,10 +408,13 @@
                 <span><i class="fa-solid fa-star"></i>5.0</span
                 ><span class="px-2"><i class="fa-regular fa-eye"></i>20</span
                 ><span><i class="fa-regular fa-heart"></i>200</span>
-                <h4>World Cup Flags Football</h4>
-                <p>Dolor sit amet consectetur. Ut urna diam quis sagittis.</p>
+                <h4 class="font-bold">Helmets For Hockeys</h4>
                 <p>
-                  <span>Price - $22.00</span
+                  Safety meets style with our latest collection of hockey
+                  helmets .
+                </p>
+                <p>
+                  <span class="text-[#FF4240] font-bold">Price - $30.00</span
                   ><span class="px-2"
                     ><i class="fa-solid fa-truck"></i>Delivery Fee : Free</span
                   >
@@ -402,10 +431,13 @@
                 <span><i class="fa-solid fa-star"></i>5.0</span
                 ><span class="px-2"><i class="fa-regular fa-eye"></i>20</span
                 ><span><i class="fa-regular fa-heart"></i>200</span>
-                <h4>World Cup Flags Football</h4>
-                <p>Dolor sit amet consectetur. Ut urna diam quis sagittis.</p>
+                <h4 class="font-bold">World Cup Flags Football</h4>
                 <p>
-                  <span>Price - $22.00</span
+                  Get ready to stand out on the flag football field with our
+                  latest collection of jerseys at our brand.
+                </p>
+                <p>
+                  <span class="text-[#FF4240] font-bold">Price - $22.00</span
                   ><span class="px-2"
                     ><i class="fa-solid fa-truck"></i>Delivery Fee : Free</span
                   >
