--- a/index.html
+++ b/index.html
@@ -157,9 +157,13 @@
             </h2>
           </div>
           <div>
-            <p class="manrope text-base text-center font-thin">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores,
-              quam.
+            <p
+              class="text-base text-center font-thin w-auto md:w-[600px] mx-auto"
+            >
+              we epitomize the pinnacle of sportsmanship and dedication. As a
+              premier professional sports club, we bring together a community of
+              athletes, coaches, and fans who share a common passion for
+              excellence in hockey.
             </p>
           </div>
           <div class="border-dashed border-2 border-b-slate-300"></div>
@@ -235,7 +239,9 @@
             </h2>
           </div>
           <div>
-            <p class="manrope text-base text-center font-thin">
+            <p
+              class="text-base text-center font-thin w-auto md:w-[600px] mx-auto"
+            >
               For young enthusiasts passionate about, our program offers a
               structured pathway for skill development, character building, and
               a lifelong love for the game.
@@ -310,9 +316,9 @@
               class="flex flex-col md:flex-row justify-center items-center gap-3"
             >
               <div>
-                <img class="w-[290px]" src="images/5.png" alt="" />
+                <img class="w-[290px] md:w-[180px]" src="images/5.png" alt="" />
               </div>
-              <div class="px-14 md:px-0 space-y-2">
+              <div class="px-14 md:px-0 space-y-2 w-full md:w-[305px]">
                 <span><i class="fa-solid fa-star"></i>5.0</span
                 ><span class="px-2"><i class="fa-regular fa-eye"></i>20</span
                 ><span><i class="fa-regular fa-heart"></i>200</span>
@@ -333,9 +339,9 @@
               class="flex flex-col md:flex-row justify-center items-center gap-3"
             >
               <div>
-                <img class="w-[290px]" src="images/6.png" alt="" />
+                <img class="w-[290px] md:w-[180px]" src="images/6.png" alt="" />
               </div>
-              <div class="px-14 md:px-0 space-y-2">
+              <div class="px-14 md:px-0 space-y-2 w-full md:w-[305px]">
                 <span><i class="fa-solid fa-star"></i>5.0</span
                 ><span class="px-2"><i class="fa-regular fa-eye"></i>20</span
                 ><span><i class="fa-regular fa-heart"></i>200</span>
@@ -356,9 +362,9 @@
               class="flex flex-col md:flex-row justify-center items-center gap-3"
             >
               <div>
-                <img class="w-[290px]" src="images/7.png" alt="" />
+                <img class="w-[290px] md:w-[180px]" src="images/7.png" alt="" />
               </div>
-              <div class="px-14 md:px-0 space-y-2">
+              <div class="px-14 md:px-0 space-y-2 w-full md:w-[305px]">
                 <span><i class="fa-solid fa-star"></i>5.0</span
                 ><span class="px-2"><i class="fa-regular fa-eye"></i>20</span
                 ><span><i class="fa-regular fa-heart"></i>200</span>
@@ -379,9 +385,9 @@
               class="flex flex-col md:flex-row justify-center items-center gap-3"
             >
               <div>
-                <img class="w-[290px]" src="images/8.png" alt="" />
+                <img class="w-[290px] md:w-[180px]" src="images/8.png" alt="" />
               </div>
-              <div class="px-14 md:px-0 space-y-2">
+              <div class="px-14 md:px-0 space-y-2 w-full md:w-[305px]">
                 <span><i class="fa-solid fa-star"></i>5.0</span
                 ><span class="px-2"><i class="fa-regular fa-eye"></i>20</span
                 ><span><i class="fa-regular fa-heart"></i>200</span>
@@ -402,9 +408,9 @@
               class="flex flex-col md:flex-row justify-center items-center gap-3"
             >
               <div>
-                <img class="w-[290px]" src="images/9.png" alt="" />
+                <img class="w-[290px] md:w-[180px]" src="images/9.png" alt="" />
               </div>
-              <div class="px-14 md:px-0 space-y-2">
+              <div class="px-14 md:px-0 space-y-2 w-full md:w-[305px]">
                 <span><i class="fa-solid fa-star"></i>5.0</span
                 ><span class="px-2"><i class="fa-regular fa-eye"></i>20</span
                 ><span><i class="fa-regular fa-heart"></i>200</span>
@@ -425,9 +431,13 @@
               class="flex flex-col md:flex-row justify-center items-center gap-3"
             >
               <div>
-                <img class="w-[290px]" src="images/10.png" alt="" />
+                <img
+                  class="w-[290px] md:w-[180px]"
+                  src="images/10.png"
+                  alt=""
+                />
               </div>
-              <div class="px-14 md:px-0 space-y-2">
+              <div class="px-14 md:px-0 space-y-2 w-full md:w-[305px]">
                 <span><i class="fa-solid fa-star"></i>5.0</span
                 ><span class="px-2"><i class="fa-regular fa-eye"></i>20</span
                 ><span><i class="fa-regular fa-heart"></i>200</span>
@@ -457,71 +467,102 @@
           </div>
           <div>
             <p class="text-base text-center font-thin">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores,
-              quam.
+              We understand that you may have questions about our program, and
+              we're here to provide you with the information you need.
             </p>
           </div>
           <div class="border-dashed border-2 border-b-slate-300"></div>
         </div>
-        <div class="flex flex-col md:flex-row justify-center gap-5">
+        <div class="grid grid-cols-1 md:grid-cols-2 justify-items-center mt-2">
           <div>
             <img src="images/11.png" alt="" />
           </div>
           <div>
-            <div class="join join-vertical w-full">
+            <div class="join join-vertical">
               <div
                 class="collapse collapse-arrow join-item border border-base-300"
               >
                 <input type="radio" name="my-accordion-4" checked="checked" />
-                <div class="collapse-title text-xl font-medium">
-                  Click to open this one and close others
+                <div class="collapse-title text-xl font-bold">
+                  Our Equipment
                 </div>
                 <div class="collapse-content">
-                  <p>hello</p>
+                  <p>
+                    Designed for comfort during extended use, this equipment
+                    seamlessly combines functionality with ergonomic features.
+                  </p>
                 </div>
               </div>
               <div
                 class="collapse collapse-arrow join-item border border-base-300"
               >
                 <input type="radio" name="my-accordion-4" />
-                <div class="collapse-title text-xl font-medium">
-                  Click to open this one and close others
+                <div class="collapse-title text-xl font-bold">
+                  Hockey Training
                 </div>
                 <div class="collapse-content">
-                  <p>hello</p>
+                  <p>
+                    Certainly! Below is a sample product description for hockey
+                    training programs or services on your website: Hockey
+                    Training Unlock your full potential on the ice with premier
+                    hockey training programs. Our comprehensive training
+                    sessions are designed to elevate your game, focusing on
+                    skill development.
+                  </p>
                 </div>
               </div>
               <div
                 class="collapse collapse-arrow join-item border border-base-300"
               >
                 <input type="radio" name="my-accordion-4" />
-                <div class="collapse-title text-xl font-medium">
-                  Click to open this one and close others
+                <div class="collapse-title text-xl font-bold">
+                  Private Lessons
                 </div>
                 <div class="collapse-content">
-                  <p>hello</p>
+                  <p>
+                    Experience unparalleled growth and skill development with
+                    our private hockey lessons at. Our one-on-one coaching
+                    sessions provide a personalized approach to elevate your
+                    game.
+                  </p>
                 </div>
               </div>
               <div
                 class="collapse collapse-arrow join-item border border-base-300"
               >
                 <input type="radio" name="my-accordion-4" />
-                <div class="collapse-title text-xl font-medium">
-                  Click to open this one and close others
-                </div>
+                <div class="collapse-title text-xl font-bold">Ski Touring</div>
                 <div class="collapse-content">
-                  <p>hello</p>
+                  <p>
+                    Embark on an unforgettable journey into the pristine
+                    wilderness with Brand Ski Touring Adventures.
+                  </p>
                 </div>
               </div>
               <div
                 class="collapse collapse-arrow join-item border border-base-300"
               >
                 <input type="radio" name="my-accordion-4" />
-                <div class="collapse-title text-xl font-medium">
-                  Click to open this one and close others
-                </div>
+                <div class="collapse-title text-xl font-bold">Booking</div>
                 <div class="collapse-content">
-                  <p>hello</p>
+                  <p>
+                    Booking your next adventure with Our Brand is a simple and
+                    streamlined process, designed to provide you with a
+                    hassle-free experience from start to finish.
+                  </p>
+                </div>
+              </div>
+              <div
+                class="collapse collapse-arrow join-item border border-base-300"
+              >
+                <input type="radio" name="my-accordion-4" />
+                <div class="collapse-title text-xl font-bold">Pricing</div>
+                <div class="collapse-content">
+                  <p>
+                    We believe in transparency and providing our customers with
+                    clear and straightforward pricing for the incredible
+                    adventures and services we offer. .
+                  </p>
                 </div>
               </div>
             </div>
@@ -535,9 +576,13 @@
             <h2 class="text-4xl text-center font-extrabold">Get In Touch</h2>
           </div>
           <div>
-            <p class="text-base text-center font-thin">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores,
-              quam.
+            <p
+              class="text-base text-center font-thin w-auto md:w-[600px] mx-auto"
+            >
+              Whether you have questions, need assistance, or are ready to book
+              your next adventure, we're here to help. Connect with Us through
+              the options below, and let's embark on your unforgettable
+              experience together.
             </p>
           </div>
           <div class="border-dashed border-2 border-b-slate-300"></div>
