--- a/index.html
+++ b/index.html
@@ -654,7 +654,7 @@
               <p class="font-bold">Massage</p>
               <div>
                 <textarea
-                  placeholder="Bio"
+                  placeholder="Write Your Massage"
                   rows="7"
                   class="textarea textarea-bordered w-[320px] lg:w-[600px]"
                 ></textarea>
